# autofe-x

./: .coveragerc  .gitignore  COMPLETE_FEATURES.md  HOUSING_EXAMPLE.py  INSTALLATION.md  INTELLIGENT_FEATURES.md  MATHEMATICAL_STATISTICAL.md  NEXTGEN_FEATURES.md  NEXTGEN_IDEAS.md  NEXTGEN_ROADMAP.md  NEXTGEN_SUMMARY.md  README.md  RELEASE_NOTES.md  example.py  example_advanced.py  example_all_advanced.py  example_intelligent.py  example_mathematical_statistical.py  example_nextgen.py  example_parallel.py  example_progress_cache.py  example_ultra_advanced.py  pyproject.toml  pytest.ini  requirements.txt  setup.py
.autofex_cache/: cache_metadata.json
.github/: dependabot.yml
.github/workflows/: ci.yml  publish.yml
autofe_x.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
autofex/: __init__.py  cli.py  core.py
autofex/analysis/: __init__.py  advanced_stats.py  statistical.py  ultra_stats.py
autofex/benchmarking/: __init__.py  benchmarker.py
autofex/data_profiling/: __init__.py  profiler.py
autofex/feature_engineering/: __init__.py  advanced.py  engineer.py
autofex/feature_selection/: __init__.py  selector.py
autofex/intelligence/: __init__.py  orchestrator.py  quality_scorer.py  recommender.py
autofex/leakage_detection/: __init__.py  detector.py
autofex/lineage/: __init__.py  tracker.py
autofex/mathematical/: __init__.py  modeling.py
autofex/numpy/: __init__.py  operations.py
autofex/numpy_advanced/: __init__.py  operations.py
autofex/pandas/: __init__.py  operations.py
autofex/pandas_advanced/: __init__.py  operations.py
autofex/scipy/: __init__.py  operations.py
autofex/scipy_advanced/: __init__.py  operations.py
autofex/statistical/: __init__.py  advanced_transforms.py  stat_transforms.py
autofex/utils/: __init__.py  cache.py  helpers.py  parallel.py  progress.py
autofex/visualization/: __init__.py  dashboard.py  multidimensional.py  plotter.py
docs/: README.md  complete-features.md  release-notes-short.md  troubleshooting.md
docs/advanced/: advanced-capabilities.md  nextgen-features.md  nextgen-summary.md  progress-caching.md  ultra-advanced.md
docs/api/: core.md
docs/deep-dive/:  complex-capabilities.md  cutting-edge.md  intelligent-features.md  mathematical-statistical.md  progress-caching.md  research-features.md  research-ideas.md  research-roadmap.md  research-summary.md  ultra-dimensional.md
docs/examples/: advanced-examples.md  basic-examples.md  usage-examples.md  (+1 more)
tests/: __init__.py  conftest.py  test_core.py  test_data_profiling.py  test_feature_engineering.py  test_leakage_detection.py
(+8 files in other folders)
