[build-system]
requires = ["setuptools>=61.0", "wheel", "pandas"]
build-backend = "setuptools.build_meta"

[project]
name = "autofex"
version = "0.1.3"
description = "Automated Feature Engineering + Data Profiling + Leakage Detection"
readme = "README.md"
requires-python = ">=3.8,<3.16"
license = {text = "MIT"}
authors = [
    {name = "AutoFE-X Team", email = "sudo.dev26@gmail.com"}
]
keywords = [
    "machine-learning",
    "feature-engineering",
    "data-profiling",
    "leakage-detection",
    "automl",
    "data-science"
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Programming Language :: Python :: 3.15",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "pandas>=1.3.0,<2.3.0",
    "numpy>=1.20.0,<2.1.0",
    "scikit-learn>=1.0.0",
    "scipy>=1.7.0",
    "networkx>=2.6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
    "black>=21.0.0",
    "flake8>=3.9.0",
    "mypy>=0.800",
    "sphinx>=4.0.0",
    "jupyter>=1.0.0",
    "codecov>=2.1.0",
]
viz = [
    "matplotlib>=3.4.0",
    "seaborn>=0.11.0",
    "plotly>=5.0.0",
    "graphviz>=0.17.0",
]
test = [
    "pytest>=6.0.0",
    "pytest-cov>=2.0.0",
]

[project.urls]
Homepage = "https://github.com/sudo-de/autofe-x"
Documentation = "https://github.com/sudo-de/autofe-x#readme"
Repository = "https://github.com/sudo-de/autofe-x"
Issues = "https://github.com/sudo-de/autofe-x/issues"

[tool.setuptools.packages.find]
exclude = ["tests*"]

[tool.black]
line-length = 88
target-version = ['py38', 'py39', 'py310', 'py311', 'py312', 'py313', 'py314']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.9"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = "test_*.py"
python_classes = "Test*"
python_functions = "test_*"
addopts = "--verbose --tb=short"
